--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
               xvfb-run node ha.js
         - uses: actions/upload-artifact@main
           with:
-              path: ha.png
+              path: videos
