--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
-on: push
-
+on:
+    push:
+    schedule:
+    - cron: '0 1 * * *'
+    
 jobs:
     point:
         runs-on: ubuntu-latest
@@ -19,3 +22,13 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
+    clean:
+        runs-on: ubuntu-latest
+        if: github.event.schedule == '0 1 * * *'
+        steps:
+        - uses: actions/setup-python@main
+          with:
+              python-version: 3.x
+        - run: |
+              pip install aiohttp
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/clean.py | python - ${{secrets.GITHUB}} 
