--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,14 @@
 on:
+    push:
     schedule:
     - cron: '0 */3 * * *'
     - cron: '0 1 * * *'
     
 jobs:
     build:
+        timeout-minutes: 3
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */3 * * *'
+        #if: github.event.schedule == '0 */3 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
