--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,13 @@
 on:
     push:
     schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 */6 * * *'
     - cron: '0 1 * * *'
     
 jobs:
     build:
-        timeout-minutes: 2
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */3 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
