--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */2 * * *'
     - cron: '0 1 * * *'
@@ -7,7 +6,7 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */2 * * *'
+        if: github.event.schedule == '0 */2 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
