--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 on:
     schedule:
-    - cron: '0 */2 * * *'
+    - cron: '0 */3 * * *'
     - cron: '0 1 * * *'
     
 jobs:
     build:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */2 * * *'
+        if: github.event.schedule == '0 */3 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
@@ -19,7 +19,7 @@ jobs:
               npm install playwright-chromium
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              xvfb-run node ha.js
+              xvfb-run node mime.js
         - uses: actions/upload-artifact@main
           with:
               path: videos
