--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 jobs:
     mime:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */3 * * *'
+        #if: github.event.schedule == '0 */3 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
