--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ on:
     push:
     schedule:
     - cron: '0 */3 * * *'
-    - cron: '0 */1 * * *'
+    - cron: '0 */6 * * *'
     - cron: '0 1 * * *'
     
 jobs:
@@ -56,7 +56,7 @@ jobs:
     #          path: videos
     ytuner:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */1 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
