--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,25 +35,25 @@ jobs:
         - run: |
               pip install aiohttp
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/clean.py | python - ${{secrets.GITHUB_TOKEN}} 
-    #youtube:
-    #    runs-on: ubuntu-latest
-    #    if: github.event_name == 'push'
-    #    steps:
-    #    - uses: actions/checkout@main
-    #    - uses: actions/setup-node@main
-    #      with:
-    #          node-version: 16.x
-    #    - env:
-    #          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-    #          DEBUG: pw:api
-    #      run: |
-    #          npm install playwright-chromium
-    #          npx playwright install ffmpeg
-    #          curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-    #          xvfb-run node youtube.js
-    #    - uses: actions/upload-artifact@main
-    #      with:
-    #          path: videos
+    youtube:
+        runs-on: ubuntu-latest
+        if: github.event_name == 'push'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 16.x
+        - env:
+              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+              DEBUG: pw:api
+          run: |
+              npm install playwright-chromium
+              npx playwright install ffmpeg
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              xvfb-run node youtube.js
+        - uses: actions/upload-artifact@main
+          with:
+              path: videos
     ytuner:
         runs-on: ubuntu-latest
         if: github.event.schedule == '0 */6 * * *'
