--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
               path: videos
     ytuner:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */6 * * *'
+        #if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
