--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
               npm install playwright-chromium
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              xvfb-run node ytuner.js
+              xvfb-run node ytuner.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
               path: videos
