--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 */4 * * *'
-    - cron: '0 */12 * * *'
+    - cron: '0 6,18 * * *'
     - cron: '0 1 * * *'
     
 jobs:
@@ -38,7 +38,7 @@ jobs:
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/clean.py | python - ${{secrets.GITHUB_TOKEN}} 
     youtube:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */12 * * *'
+        if: github.event.schedule == '0 6,18 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
