--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         - run: |
               pip install aiohttp
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/clean.py | python - ${{secrets.GITHUB_TOKEN}} 
-    youtube:
+    subscribe:
         runs-on: ubuntu-latest
         if: github.event.schedule == '0 6,18 * * *'
         steps:
@@ -51,7 +51,7 @@ jobs:
               npm install playwright-chromium
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              xvfb-run node youtube.js ${{secrets.PASSWORD}}
+              xvfb-run node subscribe.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
               path: videos
