--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
     - cron: '0 */6 * * *'
     - cron: '0 */4 * * *'
     - cron: '0 6,18 * * *'
+    - cron: '0 */2 * * *'
     - cron: '0 1 * * *'
     
 jobs:
@@ -77,3 +78,22 @@ jobs:
                   videos
                   screenshot.png
                   last.html
+    watch:
+        runs-on: ubuntu-latest
+        #if: github.event.schedule == '0 */2 * * *'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 17.x
+        - env:
+              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+              DEBUG: pw:api
+          run: |
+              npm install playwright-chromium
+              npx playwright install ffmpeg
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              xvfb-run node watch.js
+        - uses: actions/upload-artifact@main
+          with:
+              path: videos
