--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,3 +95,22 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
+    colab:
+        runs-on: ubuntu-latest
+        if: github.event.schedule == '0 */2 * * *'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 17.x
+        - env:
+              PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+              DEBUG: pw:api
+          run: |
+              npm install playwright-chromium
+              npx playwright install ffmpeg
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              xvfb-run node colab.js
+        - uses: actions/upload-artifact@main
+          with:
+              path: videos
