--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
@@ -97,7 +98,7 @@ jobs:
               path: videos
     colab:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 */2 * * *'
+        #if: github.event.schedule == '0 */2 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
@@ -108,9 +109,8 @@ jobs:
               DEBUG: pw:api
           run: |
               npm install playwright-chromium
-              npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node colab.js
         - uses: actions/upload-artifact@main
           with:
-              path: videos
+              path: screenshot.png
