--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 on:
-    push:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
@@ -98,7 +97,7 @@ jobs:
               path: videos
     colab:
         runs-on: ubuntu-latest
-        #if: github.event.schedule == '0 */2 * * *'
+        if: github.event.schedule == '0 */2 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
