--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
@@ -114,3 +115,13 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
+    cron:
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 17.x
+        - run: |
+              echo '${{secrets.GCLOUD}}' > gcloud
+              cat gcloud
