--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,5 +125,5 @@ jobs:
         - run: |
               echo '${{secrets.GCLOUD}}' > gcloud
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
-              npm install google-auth-library
+              npm install google-auth-library node-fetch
               node cron.js
