--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,4 +126,4 @@ jobs:
               echo '${{secrets.GCLOUD}}' > gcloud
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               npm install google-auth-library node-fetch
-              node cron.js
+              node cron.js ${{secrets.GITHUB}}
