--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ on:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
-    - cron: '0 1 * * *'
     repository_dispatch:
     
 jobs:
@@ -27,7 +26,7 @@ jobs:
               path: videos
     clean:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 1 * * *'
+        if: github.event.schedule == '0 */6 * * *'
         steps:
         - uses: actions/setup-python@main
           with:
