--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
@@ -36,7 +37,7 @@ jobs:
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/clean.py | python - ${{secrets.GITHUB_TOKEN}} 
     subscribe:
         runs-on: ubuntu-latest
-        if: github.event.schedule == '0 6,18 * * *'
+        #if: github.event.schedule == '0 6,18 * * *'
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-node@main
