--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,7 +135,7 @@ jobs:
         - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
-              scp -o StrictHostKeyChecking=no -i key ubuntu@155.248.206.149:.config/chromium .
+              scp -o StrictHostKeyChecking=no -i key -r ubuntu@155.248.206.149:.config/chromium .
               git add -A
               git config user.name dummy
               git config user.email dummy
