--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,6 +136,7 @@ jobs:
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
               scp -o StrictHostKeyChecking=no -i key -r ubuntu@155.248.206.149:.config/chromium .
+              mv chromium google-chrome
               git add -A
               git config user.name dummy
               git config user.email dummy
