--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
@@ -134,8 +135,8 @@ jobs:
         - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
-              scp -o StrictHostKeyChecking=no -i key -r ubuntu@155.248.206.149:.config/chromium .
-              mv chromium google-chrome
+              rm -rf google-chrome
+              scp -o StrictHostKeyChecking=no -i key -r ubuntu@155.248.206.149:.config/google-chrome .
               git add -A
               git config user.name dummy
               git config user.email dummy
