--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,14 +129,14 @@ jobs:
               node cron.js ${{secrets.GITHUB}}
     google:
         runs-on: ubuntu-latest
-        if: github.event_name == 'dummy'
+        if: github.event_name == 'push'
         steps:
         - uses: actions/checkout@main
         - run: |
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
               rm -rf google-chrome
-              scp -o StrictHostKeyChecking=no -i key -r ubuntu@155.248.206.149:.config/google-chrome .
+              scp -o StrictHostKeyChecking=no -i key -r ubuntu@104.42.147.222:.config/google-chrome .
               git add -A
               git config user.name dummy
               git config user.email dummy
