--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 on:
+    push:
     schedule:
     - cron: '0 */6 * * *'
     - cron: '0 6,18 * * *'
@@ -53,6 +54,29 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
+    subscribeCron:
+        runs-on: ubuntu-latest
+        if: github.event_name == 'push'
+        steps:
+        - uses: actions/checkout@main
+        - uses: actions/setup-node@main
+          with:
+              node-version: 17.x
+        - run: curl https://${GITHUB_REPOSITORY%/*}.github.io/common/version.js | node --input-type=module
+        - uses: actions/setup-node@main
+          with:
+              node-version: ${{env.JS}}
+        - run: |
+              curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
+              chmod 400 key
+              git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:youtube
+              cp cron/Dockerfile youtube
+              cd youtube
+              git add -A
+              git config user.email dummy
+              git config user.name dummy
+              git commit --allow-empty-message -m ''
+              git -c core.sshCommand='ssh -i ../key' push
     ytuner:
         runs-on: ubuntu-latest
         if: github.event.schedule == '0 */6 * * *'
@@ -113,7 +137,7 @@ jobs:
         - uses: actions/upload-artifact@main
           with:
               path: videos
-    cron:
+    colabCron:
         runs-on: ubuntu-latest
         if: github.event_name == 'dummy'
         steps:
