--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -1,3 +1,9 @@
-FROM ubuntu
+FROM scratch
+COPY server.js package.json /usr/local/src/
 ENV haha
-RUN ["echo", "$haha"]
+WORKDIR /usr/local/src
+COPY --from=node:slim /usr/local/bin/node /usr/bin/
+COPY --from=node:slim /lib/x86_64-linux-gnu /lib/x86_64-linux-gnu/
+COPY --from=node:slim /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/
+COPY --from=node:slim /lib64 /lib64/
+ENTRYPOINT ["node", "server.js"]
