--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,8 @@ jobs:
               curl https://${{secrets.GITHUB}}@raw.githubusercontent.com/chaowenGUO/server/main/key > key
               chmod 400 key
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:youtube
-              sed -i s/'ENV haha'/'ENV haha saewaeg'/g cron/Dockerfile
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > youtube/package.json
+              sed -i s/'^ENV haha$'/'ENV haha saewaeg'/g cron/Dockerfile
               cp cron/Dockerfile youtube
               cd youtube
               git add -A
