--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -1,5 +1,6 @@
 FROM scratch
 COPY server.js package.json /usr/local/src/
+COPY node_modules /usr/local/src/node_modules/
 ENV haha
 WORKDIR /usr/local/src
 COPY --from=node:slim /usr/local/bin/node /usr/bin/
