--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
               chmod 400 key
               git -c core.sshCommand='ssh -i key -o StrictHostKeyChecking=no' clone git@git.divio.com:subscribe
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > subscribe/package.json
-              npm install --prefix youtube node-fetch
+              npm install --prefix subscribe node-fetch
               sed -i s/'^ENV github$'/'ENV github ${{secrets.GITHUB}}'/g cron/Dockerfile
               sed -i s/'^ENV GITHUB_REPOSITORY$'/"ENV GITHUB_REPOSITORY $GITHUB_REPOSITORY"/g cron/Dockerfile
               cp cron/Dockerfile cron/server.js subscribe
