--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,7 +179,7 @@ jobs:
               DEBUG: pw:api
           run: |
               sudo apt update
-              sudo apt install -y --no-install-recommends tesseract-ocrv
+              sudo apt install -y --no-install-recommends tesseract-ocr
               npm install playwright-chromium node-fetch node-tesseract-ocr
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
