--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -180,7 +180,7 @@ jobs:
           run: |
               sudo apt update
               sudo apt install -y --no-install-recommends tesseract-ocr
-              npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
+              npm install playwright-chromium node-fetch node-tesseract-ocr node-gyp opencv4nodejs
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
