--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,13 +177,11 @@ jobs:
         - env:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
+              OPENCV4NODEJS_DISABLE_AUTOBUILD: 1
           run: |
               sudo apt update
               sudo apt install -y --no-install-recommends tesseract-ocr
-              npm install playwright-chromium node-fetch node-tesseract-ocr
-              mkdir -p /home/runner/work/mime/mime/node_modules/opencv-build/opencv/build/lib
-              ls -al /home/runner/work/mime/mime/node_modules/opencv-build/opencv/build
-              sudo npm install opencv4nodejs
+              npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
