--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,11 +178,11 @@ jobs:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
               OPENCV4NODEJS_DISABLE_AUTOBUILD: 1
-              OPENCV_LIB_DIR: /usr/lib/x86_64-linux-gnu
+              #OPENCV_LIB_DIR: /usr/lib/x86_64-linux-gnu
           run: |
               sudo apt update
-              sudo apt install -y --no-install-recommends tesseract-ocr libopencv-dev python3-opencv
-              npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
+              sudo apt install -y --no-install-recommends tesseract-ocr
+              npm install playwright-chromium node-fetch node-tesseract-ocr opencv-build
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
