--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,10 +182,9 @@ jobs:
           run: |
               sudo apt update
               sudo apt install -y --no-install-recommends tesseract-ocr libopencv-dev
-              ls -al /usr/lib/x86_64-linux-gnu
               npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
               npx playwright install ffmpeg
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              #curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
