--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,13 +178,15 @@ jobs:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
               OPENCV4NODEJS_DISABLE_AUTOBUILD: 1
+              OPENCV_BIN_DIR: /usr/bin
+              OPENCV_INCLUDE_DIR: /usr/include/opencv
               OPENCV_LIB_DIR: /usr/lib/x86_64-linux-gnu
           run: |
               sudo apt update
               sudo apt install -y --no-install-recommends tesseract-ocr libopencv-dev
               npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
               npx playwright install ffmpeg
-              #curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
