--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,10 +177,12 @@ jobs:
         - env:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
+              OPENCV4NODEJS_DISABLE_AUTOBUILD: 1
           run: |
               sudo apt update
               sudo apt install -y --no-install-recommends tesseract-ocr
-              npm install playwright-chromium node-fetch node-tesseract-ocr node-gyp opencv4nodejs
+              npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
+              ls -al
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
