--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,9 +178,10 @@ jobs:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
               OPENCV4NODEJS_DISABLE_AUTOBUILD: 1
+              OPENCV_LIB_DIR: /usr/lib/x86_64-linux-gnu
           run: |
               sudo apt update
-              sudo apt install -y --no-install-recommends tesseract-ocr
+              sudo apt install -y --no-install-recommends tesseract-ocr libopencv-dev
               npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
               ls -al
               npx playwright install ffmpeg
