--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,7 +183,7 @@ jobs:
               sudo apt update
               sudo apt install -y --no-install-recommends tesseract-ocr libopencv-dev
               npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
-              ls -al
+              ls -al /home/runner/work/mime/mime/node_modules/opencv4nodejs/build
               npx playwright install ffmpeg
               curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
