--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -185,7 +185,7 @@ jobs:
               npm install playwright-chromium node-fetch node-tesseract-ocr opencv4nodejs
               ls -al /home/runner/work/mime/mime/node_modules/opencv4nodejs/build
               npx playwright install ffmpeg
-              curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
+              #curl https://${GITHUB_REPOSITORY%/*}.github.io/common/package.json > package.json
               xvfb-run node ptc.js ${{secrets.PASSWORD}}
         - uses: actions/upload-artifact@main
           with:
