--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,7 +182,8 @@ jobs:
               sudo apt update
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
-              java -cp /usr/share/java/*:copyDependencies/*:. -Djava.library.path=/usr/lib/jni Main.java
+              ls -al /usr/lib/jni
+              java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/*:copyDependencies/*:. Main.java
         - uses: actions/upload-artifact@main
           with:
               path: |
