--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,7 +183,7 @@ jobs:
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
               ls -al /usr/lib/jni
-              java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/*:copyDependencies/*:. Main.java
+              java -cp /usr/share/java/*:copyDependencies/*:. Main.java
         - uses: actions/upload-artifact@main
           with:
               path: |
