--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,7 +182,7 @@ jobs:
               sudo apt update
               sudo apt install -y --no-install-recommends libopencv-dev
               gradle --warning-mode all copyDependencies
-              ls -al /usr/lib/jni
+              ldd -d /usr/lib/jni/libopencv-4.2.so
               java -cp /usr/share/java/*:copyDependencies/*:. Main.java
         - uses: actions/upload-artifact@main
           with:
