--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,7 +182,7 @@ jobs:
               sudo apt update
               sudo apt install -y libopencv-dev
               gradle --warning-mode all copyDependencies
-              java -cp /usr/share/java/*:copyDependencies/*:. Main.java
+              java -Djava.library.path=/usr/lib/jni -cp /usr/share/java/*:copyDependencies/*:. Main.java
         - uses: actions/upload-artifact@main
           with:
               path: |
