--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -168,7 +168,7 @@ jobs:
               git commit --allow-empty-message -m ''
               git push
     ptc:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-18.04
         steps:
         - uses: actions/checkout@main
         - uses: actions/setup-java@main
