--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,7 +174,7 @@ jobs:
         - uses: actions/setup-java@main
           with:
               java-version: 11.x
-              distribution: zulu
+              distribution: temurin
         - env:
               PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
               DEBUG: pw:api
